styles.css
div[aria-label="Live Channels"], 
div[aria-label$="Viewers Also Watch"],
div[aria-label="Recommended Categories"],
button[aria-label="Go Ad-Free for Free"],
button[data-a-target="top-nav-get-bits-button"],
button[data-a-target="whisper-box-button"],
button[aria-label="Community"],
button:has([data-a-target="tw-core-button-label-text"]),
button[aria-label="Expand Top Gifters Leaderboard"],
button[aria-label="Share"],
button[aria-label="More Options"],
button[aria-label="More options"],
a[aria-label="Browse"],
a[aria-label^="Tag"],
div[data-a-target="about-panel"],
button[aria-label="Open Notifications"],
button[aria-label="Prime offers"],
#chat-room-header-label,
div[aria-label="Followed Channels"] > div:first-child,
.followed-side-nav-header followed-side-nav-header--expanded,
div.chat-room__content > div[aria-hidden="false"],
.paid-pinned-chat-message-list,
.sticky-community-highlight {
    display: none !important;
}

div[aria-label="Followed Channels"] {
    margin-top: 10px !important;
}

.side-nav--collapsed div[aria-label="Followed Channels"] {
    margin-top: 0 !important;
}

div[data-a-target="chat-input"] {
    display: flex;
    align-items: center;
}

